Fix dark mode for blog posts

--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -5,7 +5,7 @@
 }
 
 .markdown {
-  @apply text-gray-900 leading-normal break-words;
+  @apply text-gray-900 dark:text-gray-300 leading-normal break-words;
 }
 
 .markdown > * + * {
@@ -30,6 +30,15 @@
 
 .markdown strong a {
   @apply font-bold;
+}
+
+.markdown h1,
+.markdown h2,
+.markdown h3,
+.markdown h4,
+.markdown h5,
+.markdown h6 {
+  @apply dark:text-gray-200;
 }
 
 .markdown h1 {
@@ -61,11 +70,11 @@
 }
 
 .markdown code {
-  @apply font-mono text-sm inline bg-gray-200 rounded px-1 py-05;
+  @apply font-mono text-sm inline bg-gray-200 dark:bg-gray-700 rounded px-1 py-05;
 }
 
 .markdown pre {
-  @apply bg-gray-100 rounded p-4;
+  @apply bg-gray-100 dark:bg-gray-700 rounded p-4;
 }
 
 .markdown pre code {
